# openFrameworks

./: CMakeLists.txt
cmake/: openFrameworks.cmake
cmake/cmakelists/: json_CMakeLists.txt  kissfft_CMakeLists.txt  tess2_CMakeLists.txt  utf8_CMakeLists.txt
cmake/patches/: addons_ofxVectorGraphics_libs_CreEPS.cpp.gcc6.patch  install_dependencies.sh.glm.patch  ofConstants.h.glm_deprecated.patch
